--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,15 @@
 {
-    "functions": {
-      "src/index.js": {
-        "memory": 1024,
-        "includeFiles": "src/data/pendaftar.json"
-      }
-    },
-    "rewrites": [
-      {
-        "source": "/(.*)",
-        "destination": "src/index.js"
-      }
-    ]
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/api/index.js"
+    }
+  ]
+}
