--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "node .",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon api/index.js"
   },
   "author": "Fathir",
   "license": "ISC",
